{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 109,
  "lineage": "990d0ee4-35e8-ceef-d1af-e4f214714bfc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d0d65e548b5ea4f",
            "arn": "arn:aws:ec2:ap-south-1:273928408714:elastic-ip/eipalloc-09d0d65e548b5ea4f",
            "domain": "vpc",
            "id": "eipalloc-09d0d65e548b5ea4f",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-233-49-48.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.49.48",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273928408714:internet-gateway/igw-0a3c4cc03d36c3c04",
            "id": "igw-0a3c4cc03d36c3c04",
            "owner_id": "273928408714",
            "tags": {
              "Environment": "dev",
              "Name": "main-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0c1b16fd9dfc655cf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d0d65e548b5ea4f",
            "association_id": "eipassoc-0ee3cec40a6520e75",
            "connectivity_type": "public",
            "id": "nat-0b5aff7c87affa3e6",
            "network_interface_id": "eni-048556965a7683b82",
            "private_ip": "10.0.1.67",
            "public_ip": "13.233.49.48",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c86a7bb6e2c9f8fd",
            "tags": {
              "Environment": "dev",
              "Name": "main-nat-gateway"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "main-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273928408714:route-table/rtb-00d66fb096480bc9d",
            "id": "rtb-00d66fb096480bc9d",
            "owner_id": "273928408714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b5aff7c87affa3e6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "private-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1b16fd9dfc655cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273928408714:route-table/rtb-0d9cb4f67a65b75db",
            "id": "rtb-0d9cb4f67a65b75db",
            "owner_id": "273928408714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a3c4cc03d36c3c04",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "public-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1b16fd9dfc655cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eed757f3ec032503",
            "route_table_id": "rtb-00d66fb096480bc9d",
            "subnet_id": "subnet-0b5d64d4797cb8f58"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3f957afad3df527",
            "route_table_id": "rtb-00d66fb096480bc9d",
            "subnet_id": "subnet-0e8c21dd8ceeafa6f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9e70e8599941a42",
            "route_table_id": "rtb-0d9cb4f67a65b75db",
            "subnet_id": "subnet-0c86a7bb6e2c9f8fd"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014f352adbe88a841",
            "route_table_id": "rtb-0d9cb4f67a65b75db",
            "subnet_id": "subnet-0e58f979c3e9515ec"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273928408714:subnet/subnet-0b5d64d4797cb8f58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5d64d4797cb8f58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "273928408714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-0c1b16fd9dfc655cf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273928408714:subnet/subnet-0e8c21dd8ceeafa6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8c21dd8ceeafa6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "273928408714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0c1b16fd9dfc655cf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273928408714:subnet/subnet-0c86a7bb6e2c9f8fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c86a7bb6e2c9f8fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "273928408714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-0c1b16fd9dfc655cf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273928408714:subnet/subnet-0e58f979c3e9515ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e58f979c3e9515ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "273928408714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0c1b16fd9dfc655cf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273928408714:vpc/vpc-0c1b16fd9dfc655cf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04e33f25604b8db35",
            "default_route_table_id": "rtb-020d41bd3de529b6b",
            "default_security_group_id": "sg-09f7d7fa04a16cdc5",
            "dhcp_options_id": "dopt-7f3ab517",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1b16fd9dfc655cf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020d41bd3de529b6b",
            "owner_id": "273928408714",
            "tags": {
              "Environment": "dev",
              "Name": "main-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}